--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "axios": "^0.19.2",
         "core-js": "^3.6.4",
         "fastclick": "^1.0.6",
@@ -27,6 +28,7 @@
         "@vue/cli-plugin-vuex": "~4.3.0",
         "@vue/cli-service": "~4.3.0",
         "@vue/eslint-config-standard": "^5.1.2",
+        "autoprefixer": "^9.7.0",
         "babel-eslint": "^10.1.0",
         "babel-plugin-import": "^1.13.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
@@ -39,6 +41,7 @@
         "eslint-plugin-vue": "^6.2.2",
         "less": "^3.0.4",
         "less-loader": "^5.0.0",
+        "postcss-loader": "^4.1.0",
         "svg-sprite-loader": "^5.0.0",
         "vue-template-compiler": "^2.6.12"
     }
