--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "dependencies": {
         "aos": "^2.3.4",
         "axios": "^0.19.2",
+        "better-scroll": "^2.0.5",
         "core-js": "^3.6.4",
         "fastclick": "^1.0.6",
         "postcss-px2rem": "^0.3.0",
+        "swiper": "^6.3.5",
         "vant": "^2.6.3",
         "vue": "^2.6.12",
-        "vue-router": "^3.1.6",
+        "vue-awesome-swiper": "^4.1.1",
+        "vue-page-stack": "^1.5.0",
+        "vue-router": "^3.0.7",
         "vue-scroller": "^2.2.4",
         "vue-skeleton-webpack-plugin": "^1.2.2",
         "vuex": "^3.1.3"
@@ -43,6 +47,7 @@
         "less-loader": "^5.0.0",
         "postcss-loader": "^4.1.0",
         "svg-sprite-loader": "^5.0.0",
+        "vue-navigation": "^1.1.4",
         "vue-template-compiler": "^2.6.12"
     }
 }
