🎨 improve(几乎全部): 基本上完成了全部交互与功能
地图模块有待优化
首页默认加载标题待优化

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "vue-cli4-vant",
+    "title": "十四冬奥会",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "dev": "vue-cli-service serve",
-        "build": "vue-cli-service build",
+        "build": "vue-cli-service build --mode production",
         "test": "vue-cli-service build --mode test",
         "lint": "vue-cli-service lint"
     },
